--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Elijah Iannucci's Portfolio",
-  "name": "React based portfolio comprised of animations, API usage and more...",
+  "short_name": "Elijah's Portfolio",
+  "name": "React based site showcasing animations, banner-ads, API usage examples and more...",
   "icons": [
     {
       "src": "favicon.ico",
@@ -11,6 +11,11 @@
       "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
+    },
+    {
+      "src": "logo200.png",
+      "type": "image/png",
+      "sizes": "200x191"
     },
     {
       "src": "logo512.png",
